tests/derive-tests/variant_downcast/fail/struct.err.txt
error: expected `enum`
 --> /tests/derive-tests/variant_downcast/fail/struct.rs:4:5
  |
4 | pub struct Struct {
  |     ^^^^^^
